Cuarto por error

--- a/public/modulos/index.html
+++ b/public/modulos/index.html
@@ -135,7 +135,7 @@
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
       <h1 id="introducción-a-java">Introducción a Java</h1>
-<p>Java es uno de los lenguajes de programación más populares y usados en todo el mundo. Es un lenguaje que se utiliza tanto para aplicaciones de escritorio como para aplicaciones web, móviles y hasta juegos. Una de las características más destacadas de Java es que <strong>es multiplataforma</strong>, es decir, el mismo código puede ejecutarse en diferentes sistemas operativos sin modificarlo.</p>
+<p>Java es uno de los lenguajes de programacion más populares y usados en todo el mundo. Es un lenguaje que se utiliza tanto para aplicaciones de escritorio como para aplicaciones web, móviles y hasta juegos. Una de las características más destacadas de Java es que <strong>es multiplataforma</strong>, es decir, el mismo código puede ejecutarse en diferentes sistemas operativos sin modificarlo.</p>
 <h2 id="qué-es-java">¿Qué es Java?</h2>
 <p>Java es un lenguaje de programación orientado a objetos, lo que significa que todo en Java es tratado como un &ldquo;objeto&rdquo;, lo que ayuda a organizar y estructurar mejor los programas. Este lenguaje fue diseñado para ser fácil de aprender, pero también muy potente, y es usado en muchos ámbitos como desarrollo web, aplicaciones móviles (especialmente en Android), y software empresarial.</p>
     </div>
