Quinto por error

--- a/public/imagenes/index.html
+++ b/public/imagenes/index.html
@@ -143,7 +143,7 @@ Hace poco realicé un viaje a Biella, una ciudad en el norte de Italia, famosa p
 <p>Brockhampton es un colectivo musical que ha influido mucho en mi vida. Su estilo único y su energía creativa me han inspirado profundamente.</p>
 <p><img src="brockhampton.jfif" alt="Brockhampton"></p>
 <hr>
-<p>Gracias por visitar mi página. ¡Espero que disfrutes las imágenes!</p>
+<p>Gracias por visitar mi pagina. ¡Espero que disfrutes las imágenes!</p>
 
       </div>
     </article>
